--- a/Server Vocabulary Test/style/output.css
+++ b/Server Vocabulary Test/style/output.css
@@ -576,8 +576,38 @@ video {
   margin: 0px;
 }
 
+.m-10 {
+  margin: 2.5rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .box-border {
   box-sizing: border-box;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -588,10 +618,52 @@ video {
   display: none;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-450 {
+  height: 450px;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.w-1000 {
+  width: 1000px;
+}
+
+.w-2\/5 {
+  width: 40%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.select-text {
+  -webkit-user-select: text;
+     -moz-user-select: text;
+          user-select: text;
 }
 
 .flex-col {
@@ -602,18 +674,52 @@ video {
   align-items: center;
 }
 
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+.justify-center {
+  justify-content: center;
 }
 
 .overflow-y-auto {
   overflow-y: auto;
 }
 
-.bg-\[url\(\'\.\.\/img\/christopher-gower-vjMgqUkS8q8-unsplash\.jpg\'\)\] {
-  background-image: url('../img/christopher-gower-vjMgqUkS8q8-unsplash.jpg');
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-8 {
+  border-width: 8px;
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-orange-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 215 170 / var(--tw-border-opacity));
+}
+
+.bg-f4edea {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 237 234 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-custom-image {
@@ -640,167 +746,77 @@ video {
   padding: 0px;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
 }
 
-#container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items:center;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
-#buttonContainer, .buttonContainer {
-  display: flex;
-  justify-content: center;
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
-#randomBtn,
-#backBtn,
-#toggleButton,
-#forwardBtn,
-#toggleRu,
-.button {
-  margin: 40px 20px;
-  width: 200px;
-  height: 40px;
-  border-radius: 15px;
-  border: 1px solid gray;
-  cursor: pointer;
-  color: rgb(32, 32, 32);
-  font-size: 0.9rem;
-  display: inline-block;
-  transition: background-color 0.4s ease-in-out;
-  background-color: transparent;
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
-#randomBtn:hover,
-#backBtn:hover,
-#toggleButton:hover,
-#forwardBtn:hover,
-#toggleRu:hover,
-.button:hover {
-  color: black;
-  background-color: #f4d1ae;
-  box-shadow: 3px 3px 3px black;
+.duration-500 {
+  transition-duration: 500ms;
 }
 
-#words {
-  width: 1000px;
-  height: 450px;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 50px;
-  color: rgb(32, 32, 32);
-  background-color: #f4edea;
-  border: 10px solid #f4d1ae;
+.duration-700 {
+  transition-duration: 700ms;
 }
 
-#words p,
-#words h3 {
-  margin-bottom: 20px;
-  -webkit-user-select: text;
-     -moz-user-select: text;
-          user-select: text;
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hidden, .nonVisible {
-  display: none;
+.hover\:bg-orange-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 
-.visible {
-  display: flex;
-  margin-top: 40px;
-}
-
-.inputContainer {
-  width: 900px;
-  height: 200px;
-  margin: auto;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 50px 50px 25px 50px;
-  color: gray;
-  background-color: #f4edea;
-  border: 10px solid #f4d1ae;
-}
-
-input[type="text"] {
-  padding: 10px;
-  font-size: 16px;
-  margin: 10px 0;
-  width: 100%;
-  border : none;
-  border-radius: 5px;
-}
-
-.button:hover {
-  background-color: lightsteelblue;
-  outline: none;
-}
-
-#wordForm {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
-}
-
-/* Эксперименты */
-
-.searchContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 1000px;
-  margin: 40px;
-  padding: 20px 50px;
-  color: gray;
-  background-color: #f4edea;
-  border: 10px solid #f4d1ae;
-}
-
-.searchContainer input[type="text"] {
-  width: 80%;
-  /* Адаптируйте ширину по необходимости */
-  padding: 10px;
-  margin: 10px 0;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  border: 1px solid gray;
-  background-color: #fff;
-  transition: background-color 0.4s ease-in-out;
-}
-
-.searchContainer button {
-  width: 40%;
-  /* Адаптируйте ширину по необходимости */
-  padding: 10px;
-  margin: 10px 0;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  border: 1px solid gray;
-  cursor: pointer;
-  background-color: transparent;
-  transition: background-color 0.4s ease-in-out;
-  color: black;
-}
-
-.searchContainer button:hover {
-  color: black;
-  background-color: #f4d1ae;
-  box-shadow: 3px 3px 3px black;
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (min-width: 640px) {
